# deepgram-azureAi-python

./: .gitignore  Dockerfile  README.MD  compose.yml  pyproject.toml
api/: Dockerfile  requirements.txt
api/app/: main.py
api/app/core/: auth.py  config.py  database.py  exceptions.py
api/app/models/: request_log.py  task.py
api/app/routers/: intelligence_document_processing.py  speech_to_text.py  text_to_speech.py
api/app/schemas/: intelligence_document_processing.py  speech_to_text.py  text_to_speech.py
api/app/services/: base.py
api/app/services/azure_idp/: azure_intelligence_document_processing.py
api/app/services/deepgram/: deepgram_speech_to_text.py  deepgram_text_to_speech.py
api/app/services/llm/: llm.py
api/app/services/llm/prompts/: system_prompt.py  user_prompt.py
api/app/services/tracking/: tracking.py
api/app/utils/: diarization.py  file_utils.py  queue.py  response_builder.py  task_utils.py  worker.py
infra/: .env.example  compose.yml  docker-compose.yml  init.sql
load_test/: README.md  benchmark.py  benchmark_results.csv  patched_app.py
