[project]
name = "deepgram-azureai-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
